# UnitTests

./: CMakeLists.txt  Debug_Tasks.h  FactorAlgorithm.cpp  FactorAlgorithm.h  FactorAnalysis.cpp  FactorAnalysis.h  LICENSE  LongNumberVectorResult.cpp  LongNumberVectorResult.h  README  SubtractAlgorithm.h  UnitTests.cpp  main.cpp
